[FE] SISC1-198 [FIX]: letter-spacing 수정

--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -7,7 +7,7 @@
   left: 0;
   z-index: 1000;
   display: flex;
-  background-color: #02040d;
+  background-color: #000000;
   align-items: center;
   justify-content: space-between;
   padding: 0 30px;
@@ -36,7 +36,7 @@
   font-weight: 600;
   font-size: 18.53px;
   line-height: 120%;
-  letter-spacing: -3%;
+  letter-spacing: -0.03em;
   color: white;
 }
 
@@ -73,7 +73,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 120%;
-  letter-spacing: -3%;
+  letter-spacing: -0.03em;
   width: 90px;
 }
 
@@ -86,6 +86,6 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 120%;
-  letter-spacing: -3%;
+  letter-spacing: -0.03em;
   width: 100px;
 }
